--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
         uses: SamKirkland/web-deploy@v1
         with:
           target-server: dev.hydromet.net.au
-          remote-user: hydromet
+          remote-user: admin@hydromet.net.au
           private-ssh-key: ${{ secrets.SSH_KEY }}
           destination-path: /home/hydromet/dev.hydromet.net.au/wp-content/themes/my-classic-theme/
